[package]
name = "gateway-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13"
flate2 = { version = "1.0", default-features = false, features = [
    "zlib-ng-compat"
] }
futures-util = { version = "0.3", default-features = false }
halfbrown = "0.1"
hyper = { version = "0.14", default-features = false, features = [
    "server",
    "http1",
    "http2"
] }
itoa = "1.0"
libc = { version = "0.2", default-features = false }
metrics = { version = "0.18", default-features = false }
metrics-exporter-prometheus = { version = "0.9", default-features = false }
mimalloc = { version = "0.1", default-features = false, features = [
    "override"
] }
rand = "0.8"
ring = { version = "0.16", default-features = false }
serde = { version = "1", features = ["derive"] }
simd-json = { version = "0.4", default-features = false, features = [
    "serde_impl"
] }
tokio-tungstenite = { version = "0.17", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread"
] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "std"
] }
twilight-cache-inmemory = { git = "https://github.com/Gelbpunkt/twilight.git", branch = "custom-new", default-features = false }
twilight-gateway = { git = "https://github.com/Gelbpunkt/twilight.git", branch = "custom-new", default-features = false, features = [
    "zlib-simd",
    "simd-json",
    "rustls-webpki-roots",
] }
twilight-gateway-queue = { git = "https://github.com/Gelbpunkt/twilight.git", branch = "custom-new", default-features = false, features = [
    "rustls-webpki-roots",
] }
twilight-http = { git = "https://github.com/Gelbpunkt/twilight.git", branch = "custom-new", default-features = false, features = [
    "rustls-webpki-roots",
    "simd-json"
] }
twilight-model = { git = "https://github.com/Gelbpunkt/twilight.git", branch = "custom-new" }

[patch.crates-io]
metrics = { git = "https://github.com/metrics-rs/metrics.git", branch = "dependabot/cargo/parking_lot-0.12" }
metrics-exporter-prometheus = { git = "https://github.com/metrics-rs/metrics.git", branch = "dependabot/cargo/parking_lot-0.12" }
value-trait = { git = "https://github.com/Gelbpunkt/value-trait.git" }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
debug-assertions = false
