[package]
name = "gateway-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
debug-assertions = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.21"
flate2 = { version = "1.0", features = ["rust_backend"] }
futures-util = { version = "0.3", default-features = false }
halfbrown = { version = "0.2", features = ["serde"] }
hyper = { version = "0.14", default-features = false, features = [
    "server",
    "http1",
    "http2",
] }
inotify = { version = "0.10", default-features = false, features = ["stream"] }
itoa = "1.0"
metrics = { version = "0.21", default-features = false }
metrics-exporter-prometheus = { version = "0.12", default-features = false }
mimalloc = { version = "0.1", default-features = false, features = [
    "override",
] }
rand = "0.8"
ring = { version = "0.16"  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = true, features = ["std"] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "signal",
] }
tokio-websockets = { version = "0.4", features = [
    "server",
    "ring"
] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "std",
] }
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "main", default-features = false }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "main", default-features = false, features = [
    "rustls-webpki-roots",
] }
twilight-gateway-queue = { git = "https://github.com/twilight-rs/twilight.git", branch = "main", default-features = false, features = [
] }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "main", default-features = false, features = [
    "rustls-webpki-roots",
] }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "main" }
